--- a/Wadoku.css
+++ b/Wadoku.css
@@ -50,11 +50,9 @@ a:hover {
 .t{border-top:1px dotted gray}
 .l{border-left:1px dotted gray}
 .r{border-right:1px dotted gray}
-.jap:before{content:' ('}
-.jap:after{content:')'}
 .transcr:before{content:'<'}
 .transcr:after{content:'>'}
-.jap + .transcr:before{content:'\0020'}
+.jap + .transcr:before,.transcr + .jap:before{content:'\0020'}
 .reflink {margin-left:4px;margin-right:4px;}
 .reflink.syn:before{content:'\21d2\00a0'}
 .reflink.anto:before{content:'\21d4\00a0'}
@@ -70,12 +68,13 @@ a:hover {
 .hinshi{
     font-family: 'HelveticaNeue';
     font-size:60%;
-    background: #e0e0e0;
+    background: #f0f0f0;
     vertical-align:8%;
     margin-right: 0.5em;
     margin-top: .5em;
     margin-bottom: .2em;
     display: inline-block;
+    padding: 0 2px;
 }
 .subheadword{
     font-size: 80%;
