--- a/Wadoku.css
+++ b/Wadoku.css
@@ -11,22 +11,32 @@ body{
     margin-top: 0.4em;
     margin-bottom: 10px;
 }
-h1	{
-	font-size: 150%;
+
+h1 {
+    font-size: 150%;
+    margin-bottom: 0.2em;
 }
 
-h3	{
-	font-size: 100%;
+span.headword {
+    font-weight:bold;
+    font-size:100%;
+    margin-bottom: 0.2em;
+}
+
+span.hyouki {
+    font-weight:normal;
+    font-size:80%;
+    vertical-align:10%;
 }
 
 a       {
-        color:#2971A7;
-        text-decoration:none;
+    color:#2971A7;
+    text-decoration:none;
 }
 
 a:hover {
-        color:#2971A7;
-        text-decoration:underline;
+    color:#2971A7;
+    text-decoration:underline;
 }
 
 
@@ -43,6 +53,7 @@ a:hover {
     margin: 4px 0;
 }
 .klammer:before{content:'\0020'}
+.etym {color: gray;}
 .etym:before{content:'\00a0('}
 .etym:after{content:')'}
 .famn{font-weight:bold}
@@ -66,9 +77,8 @@ a:hover {
     font-variant:small-caps
 }
 .hinshi{
-    font-family: 'HelveticaNeue';
-    font-size:60%;
-    background: #f0f0f0;
+    font-family: 'Baskerville';
+    font-size:80%;
     vertical-align:8%;
     margin-right: 0.5em;
     margin-top: .5em;
@@ -76,6 +86,8 @@ a:hover {
     display: inline-block;
     padding: 0 2px;
 }
+.hinshi:before {content: '〘'}
+.hinshi:after {content: '〙'}
 .subheadword{
     font-size: 80%;
 }
@@ -98,3 +110,60 @@ a:hover {
 .title:before{content:'\201e'}
 .title:after{content:'\201f'}
 .klammer{color:gray}
+
+/* für Lion Dictionary popup */
+
+html.apple_client-panel {
+    background-color: transparent;
+}
+html.apple_client-panel body {
+    font-size: 14px;
+
+    margin-top: 0px;
+    margin-left: 1em;
+    margin-bottom: 0px;
+    margin-right: 1em;
+
+    color: #111111;
+    text-shadow: 0px 1px 0px #EEEEEE;
+    line-height: 18px;
+
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+html.apple_client-panel a,
+html.apple_client-panel a:link,
+html.apple_client-panel a:visited,
+html.apple_client-panel a:hover,
+html.apple_client-panel a:active
+{
+    color: #000000;
+    text-decoration: none;
+}
+html.apple_client-panel div.lineart {
+    display: none;
+}
+html.apple_client-panel img {
+    display: none;
+}
+
+html.apple_client-panel h1,
+html.apple_client-panel h1 > *
+{
+    font-size: 100%;
+    color: #777777;
+}
+
+html.apple_client-panel .hinshi {
+    display: none;
+}
+
+html.apple_client-panel span.meaning,
+html.apple_client-panel span.subheadword,
+html.apple_client-panel span.example
+{
+    display: block;
+    padding-bottom: 2px;
+    padding-left: 1em;
+    text-indent: -1em;
+}
