add option to show link to online version

--- a/Wadoku.css
+++ b/Wadoku.css
@@ -29,6 +29,10 @@ span.hyouki {
     vertical-align:10%;
 }
 
+.uid {
+    font-size: 80%;
+}
+
 a       {
     color:#2971A7;
     text-decoration:none;
