surround pipe in reading with span element and display in light gray

--- a/Wadoku.css
+++ b/Wadoku.css
@@ -46,6 +46,10 @@ span.headword {
     margin-bottom: 0.2em;
 }
 
+span.headword .divider {
+    color: #ddd;
+}
+
 span.hyouki {
     font-weight:normal;
     font-size:80%;
