--- a/Wadoku.css
+++ b/Wadoku.css
@@ -371,3 +371,8 @@ html.apple_client-panel span.subheadword
     padding-left: 1em;
     text-indent: -1em;
 }
+
+html.apple_client-panel span.divider
+{
+    display: none;
+}
