--- a/Wadoku.css
+++ b/Wadoku.css
@@ -197,6 +197,7 @@ ul.related > li.related:before { content: ' ‖ '}
 .reflink.anto:before{content:'\21d4\00a0'}
 .reflink.main:before{content:'\21d1\00a0'}
 .reflink.aread:before{content:'\2192\00a0'}
+.reflink.atranscr:before{content:'\261e\00a0'}
 .reflink.parent:before{content:'\21e7\00a0'}
 .dom{
     font-family:sans-serif;
