prepare for dark mode, #6

--- a/Wadoku.css
+++ b/Wadoku.css
@@ -24,6 +24,10 @@
     - ersetzt Gaiji durch Textrepräsentation in @d:alt
 
 */
+html {
+    -apple-color-filter: apple-invert-lightness();
+}
+
 d|entry {
 }
 
